--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,16 @@
-{ 'version': 2, 'builds': [{ 'src': 'index.js', 'use': '@vercel/node' }], 'rewrites': [{ 'source': '/(.*)', 'destination': 'index.js' }] } 
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "index.js"
+      }
+    ]
+  }
+  
